# langquant

./: .gitignore  .hermes-seal.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLIANCE-DRAFT.md  CONTRIBUTING.md  LICENSE  LOG.md  README.md  TODO.md  analyze_results.py  llms.txt  lpci.py  lpci_resume_10.py  lpci_rigorous.py  lpci_test.py  postprocess_te.py  pyproject.toml  run_experiment.py  run_raw.py  sbom.cdx.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
results/: full_run_v1.jsonl  full_run_v1_manifest.json  lpci_ab_test.jsonl  lpci_rigorous.jsonl  lpci_rigorous_summary.jsonl  run_manifest.json  run_results.jsonl  smoke_test_v2.jsonl  smoke_test_v2_manifest.json
scripts/: onboard.sh  verify.sh
tasks/: task_set.jsonl
tests/: test_graceful_degrade.py
